--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,14 +1,28 @@
-.header{
-    width: 100%;
+.header {
+  padding: 20px 10px;
+  background-color: #d1a9b6;
+  border-bottom: 2px solid #983555;
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    padding: 20px 80px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header {
     padding: 20px 120px;
-    border-bottom: 1px solid rgb(220, 220, 220);
+  }
 }
 
-.siteTitle{
-    font-size: 2rem;
-    font-weight: 900;
+
+
+.siteTitle {
+  font-size: 2rem;
+  font-weight: 900;
 }
 
-.active{
-    color: red;
+.active {
+  color: red;
 }
