--- a/src/pages/Cafe/styles.module.css
+++ b/src/pages/Cafe/styles.module.css
@@ -1,13 +1,27 @@
 .container {
-  padding: 20px 120px;
+  padding: 20px 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    padding: 20px 80px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    padding: 20px 120px;
+  }
 }
 
 .btnContainer {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 10px 0;
+  background-color: white; 
+  padding: 15px;
+  border: 1px solid rgb(200, 200, 200);
 }
 
 .addBtn {
@@ -37,3 +51,4 @@
   align-items: center;
   gap: 10px;
 }
+
