--- a/src/pages/Employee/styles.module.css
+++ b/src/pages/Employee/styles.module.css
@@ -1,11 +1,27 @@
 .container {
-  padding: 20px 120px;
+  padding: 20px 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    padding: 20px 80px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    padding: 20px 120px;
+  }
 }
 
 .btnContainer {
-  width: 100%;
-  text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 10px 0;
+  background-color: white; 
+  padding: 15px;
+  border: 1px solid rgb(200, 200, 200);
 }
 
 .addBtn {
@@ -28,4 +44,10 @@
 
 .link{
   text-decoration: none;
+}
+
+.searchGrp{
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
