--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,3 +1,9 @@
-*{
-    margin: 0;
+* {
+  margin: 0;
+}
+
+body {
+  background-color: #FAACA8;
+  background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+  height: 100vh;
 }
