--- a/src/components/Table/styles.module.css
+++ b/src/components/Table/styles.module.css
@@ -1,7 +1,6 @@
 .table {
   width: 100%;
   height: 600px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
-
-
