--- a/src/pages/Cafe/styles.module.css
+++ b/src/pages/Cafe/styles.module.css
@@ -16,13 +16,24 @@
 
 .btnContainer {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin: 10px 0;
   background-color: white; 
   padding: 15px;
   border: 1px solid rgb(200, 200, 200);
+  border-bottom: 0;
+  gap: 10px;
 }
+
+@media screen and (min-width: 573px) {
+  .btnContainer {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+
 
 .addBtn {
   background-color: red;
@@ -40,6 +51,8 @@
   align-items: center;
   gap: 10px;
   text-decoration: none;
+  margin: auto 0;
+  text-decoration: none !important;
 }
 
 .link {
