--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -3,7 +3,5 @@
 }
 
 body {
-  background-color: #FAACA8;
-  background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
-  height: 100vh;
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
 }
